--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,93 @@
 body{
 	font-family: 'Playfair Display', serif;
 	width: 100%;
+	overflow-x: hidden;
+	background-color: #ffffff;
 }
+a{
+	text-decoration: none;
+	color: inherit;
+	display: block;
+}
+a:hover, a:visited{
+	color: inherit;
+	text-decoration: none;
+}
+img{
+	max-height: 100%;
+	max-width: 100%;
+}
+ul{
+	list-style: none;
+}
+div, section{
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+}
+.list__list-inline{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+.list__list-inline.list__list-inline__right{
+	padding-left: 0px;
+}
+.center-absolute{
+	/* Remember to Add a fixed Height to this */
+	top: 0; right: 0; left: 0; bottom: 0;
+	margin: auto;
+}
+/*--- Header Styles ---*/
+header{
+	position: relative;
+	height: 100px;
+	overflow: hidden;
+	font-weight: 600;
+}
+header .navbar{
+	background-color: rgba(255, 255, 255, 1);
+	height: 100%;
+}
+header .navbar.navbar__fixed{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100px;
+	z-index: 100;
+	box-shadow: 1px 2px 1px rgba(50, 50, 50, 0.05);
+}
+header .navbar .brand{
+	height: 70px;
+	width: 200px;
+	text-align: center;
+	flex: 1;
+}
+header .navbar .brand img{
+	margin: 0 auto;
+}
+header .navbar .nav-menu-holder{
+	position: absolute;
+	height: 100%;
+	width: 90%;
+	top: 0;
+	right: 0;
+	left: 0;
+	margin: 0 auto;
+	padding: 10px;
+	display: flex;
+}
+header .navbar .nav-menu-holder ul{
+	margin-top: 10px;
+	flex: 2;
+}
+header .navbar .nav-menu-holder ul li{
+	min-width: 100px;
+	padding-left: 10px;
+	padding-right: 10px;
+	text-align: center;
+	font-size: 12px;
+}
+/*--- End of Header Styles ---*/
